# rust-scroller

./: Cargo.toml  README.md
assets/: enemy_kobold_sprite_sheet.json  enemy_kobold_sprite_sheet.ron  player_sprite_sheet.json  player_sprite_sheet.ron  sprite_sheet.json  sprite_sheet.ron  tiled_example.json  tiled_example.tmx
config/: display.ron  input.ron
src/: animation.rs  gamestate.rs  main.rs  system.rs
src/animation/: mod.rs
src/character/: mod.rs
src/hitbox/: mod.rs
src/state/: load_map_state.rs  main_state.rs  mod.rs
src/tilemap/: json.rs  mod.rs  resource.rs
