[package]
name = "rust-scroller"
version = "0.2.0"
authors = []
edition = "2018"

[dependencies]
amethyst = "0.13.2"
amethyst_physics = "0.1.0"
amethyst_nphysics = "0.1.0"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }

[features]
# empty = ["amethyst/empty"]
metal = ["amethyst/metal"]
# vulkan = ["amethyst/vulkan"]
